--- a/adidas.html
+++ b/adidas.html
@@ -72,6 +72,7 @@
           <p>Precio: 50$</p>
           <p>Un modelo que nunca pasa de moda.</p>
         </div>
+      </div>
       <div class="sneakermodel">
         <div class="picture">
           <img src="img/adidasgrandcourt.jpg" alt="Zapatillas Adidas Grand court" height="150vh" width="230vw">
@@ -81,6 +82,7 @@
           <p>Precio: 70$</p>
           <p>Zapatillas perfectas para combinar con cualquier outfit.</p>
         </div>
+      </div>
     </div>
 
     <script
