--- a/mujer.html
+++ b/mujer.html
@@ -72,6 +72,7 @@
           <p>Precio: 40$</p>
           <p>Excelente modelo para la práctica deportiva.</p>
         </div>
+      </div>
       <div class="sneakermodel">
         <div class="picture">
           <img src="img/tommyhilfigerfeminineactivecity.jpg" alt="Zapatillas Tommy Hilfiger Active city" height="150vh" width="230vw">
@@ -81,6 +82,7 @@
           <p>Precio: 90$</p>
           <p>El mejor modelo para prestar comodidad a tus outfists más elegantes.</p>
         </div>
+      </div>
     </div>
 
     <script
