--- a/hombre.html
+++ b/hombre.html
@@ -62,6 +62,8 @@
         </div>
       </nav>
       <!-- NAVBAR -->
+
+
     <div id="hombrebody">
       <div class="sneakermodel">
         <div class="picture">
@@ -72,6 +74,7 @@
           <p>Precio: 50$</p>
           <p>Zapatillas perfectas para combinar ocn cualquier outfit.</p>
         </div>
+      </div>
       <div class="sneakermodel">
         <div class="picture">
           <img src="img/nikerevolution6.jpg" alt="Zapatillas Nike Revolution6" height="150vh" width="230vw">
@@ -81,6 +84,7 @@
           <p>Precio: 60$</p>
           <p>Excelente modelo para la práctica deportiva.</p>
         </div>
+      </div>
       <div class="sneakermodel">
         <div class="picture">
           <img src="img/airmax.jpg" alt="Zapatillas Nike Air max" height="150vh" width="230vw">
@@ -90,6 +94,7 @@
           <p>Precio: 100$</p>
           <p>Un modelo que nunca pasa de moda.</p>
         </div>
+      </div>
       <div class="sneakermodel">
         <div class="picture">
           <img src="img/adidas samba.jpg" alt="Zapatillas Adidas Samba" height="150vh" width="230vw">
@@ -99,6 +104,7 @@
           <p>Precio: 50$</p>
           <p>Un modelo que nunca pasa de moda.</p>
         </div>
+      </div>
       <div class="sneakermodel">
         <div class="picture">
           <img src="img/adidasgrandcourt.jpg" alt="Zapatillas Adidas Grand court" height="150vh" width="230vw">
@@ -108,6 +114,7 @@
           <p>Precio: 70$</p>
           <p>Zapatillas perfectas para combinar con cualquier outfit.</p>
         </div>
+      </div>
       <div class="sneakermodel">
         <div class="picture">
           <img src="img/newbalanceMS237GA.jpg" alt="Zapatillas New Balance MS237GA" height="150vh" width="230vw">
@@ -117,6 +124,7 @@
           <p>Precio: 65$</p>
           <p>Zapatillas perfectas para combinar con cualquier outfit.</p>
         </div>
+      </div>
     </div>
 
     <script
