--- a/niños.html
+++ b/niños.html
@@ -72,6 +72,7 @@
           <p>Precio: 20$</p>
           <p>Zapatillas con motivos del videojuego más popular.</p>
         </div>
+      </div>
       <div class="sneakermodel">
         <div class="picture">
           <img src="img/niñoARMANI.jpg" alt="Zapatillas Armani" height="150vh" width="230vw">
@@ -81,6 +82,7 @@
           <p>Precio: 60$</p>
           <p>Las zapatillas más exclusivas para tus hijos.</p>
         </div>
+      </div>
     </div>
 
     <script
